--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "global": "^4.4.0",
+    "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
@@ -22,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
