--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,26 @@
 {
     "singleQuote": true,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "arrowParens": "avoid",
+    "bracketSpacing": true,
+    "htmlWhitespaceSensitivity": "css",
+    "insertPragma": false,
+    "jsxBracketSameLine": false,
+    "jsxSingleQuote": false,
+    "proseWrap": "preserve",
+    "quoteProps": "as-needed",
+    "requirePragma": false,
     "semi": true,
+    "trailingComma": "es5",
     "useTabs": false,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "printWidth": 80
-  }
+    "vueIndentScriptAndStyle": false,
+    "overrides": [
+        {
+          "files": "*.css",
+          "options": {
+            "parser": "css"
+          }
+        }
+      ]
+}
