--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "global": "^4.4.0",
         "immer": "^8.0.1",
+        "moment": "^2.29.1",
         "quill": "^1.3.7",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
