--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "global": "^4.4.0",
+        "history": "^5.0.0",
         "immer": "^8.0.1",
         "moment": "^2.29.1",
         "quill": "^1.3.7",
