--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
         "web-vitals": "^0.2.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "cp .config/.env.local .env && react-scripts start",
+        "build": "cp .config/.env.local .env && react-scripts build",
+        "build:prod": "cp .config/.config/.env.local .env && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
