--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "scripts": {
         "start": "cp .config/.env.local .env && react-scripts start",
         "build": "cp .config/.env.local .env && react-scripts build",
-        "build:prod": "cp .config/.config/.env.local .env && react-scripts build",
+        "build:prod": "cp .config/.env.prod .env && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
