--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.3",
+        "@tosspayments/sdk": "^1.1.4",
         "axios": "^0.21.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.22.0",
@@ -16,6 +17,7 @@
         "history": "^5.0.0",
         "immer": "^8.0.1",
         "moment": "^2.29.1",
+        "query-string": "^7.0.0",
         "quill": "^1.3.7",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
