--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "moment": "^2.29.1",
         "query-string": "^7.0.0",
         "quill": "^1.3.7",
+        "quill-image-uploader": "^1.2.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.2",
