--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 # misc
 .DS_Store
 # .env
-.env.local
+.env
+# .env.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -24,3 +25,4 @@ yarn-debug.log*
 yarn-error.log*
 
 .eslintcache
+\
