[test] 게산기 로직을 테스트하라

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "shipment-front",
     "version": "0.1.0",
     "private": true,
+    "jest": {
+        "transformIgnorePatterns": [
+            "/node_modules/(?!quill-image-uploader).+\\.js$"
+        ]
+    },
     "dependencies": {
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
