--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "quill-image-uploader": "^1.2.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-kakao-login": "^2.1.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.1",
