--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "global": "^4.4.0",
         "history": "^5.0.0",
         "immer": "^8.0.1",
+        "js-file-download": "^0.4.12",
         "moment": "^2.29.1",
         "query-string": "^7.0.0",
         "quill": "^1.3.7",
