[Fix] 결제 후 진행중이라는 progress 추가하라

--- a/.config/.env.local
+++ b/.config/.env.local
@@ -2,3 +2,4 @@ REACT_APP_ENV=local
 REACT_APP_API_URL=http://localhost:8080
 REACT_APP_PAYMENT_SECRET_KEY=dGVzdF9za19MZXg2QkpHUU9WRDkyZU5selhPclc0dzJ6TmJnOg==
 REACT_APP_PAYMENT_CLIENT_KEY=test_ck_lpP2YxJ4K87PxeNb69p3RGZwXLOb
+REACT_APP_PATMENT_AUTHORIZATION=dGVzdF9za19MZXg2QkpHUU9WRDkyZU5selhPclc0dzJ6TmJnOg==
