--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@testing-library/user-event": "^12.6.3",
         "@tosspayments/sdk": "^1.1.4",
         "axios": "^0.21.1",
+        "connected-react-router": "^6.9.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
